html/static/css/main.css
/*Common elements and mobile device settings*/
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 100%;
    overflow: hidden;
    /* background-color: #333;*/
    background-color: #03396c;
    
}

 li {
        float: center;
    }

li a {
    display: block;
    color: white;
    padding: 8px 0 8px 16px;
    text-align: center;
    text-decoration: none;
}

/* Change the link color on hover */
li a:hover {
    background-color: #005b96;
    color: white;
    
}

img{
    
}
 
.active {
    background-color: #4CAF50;
}
 
.footer {
    overflow: hidden;
    padding: 0.3% 0 0.3% 0.6%;
    background-color: #333;
} 

.footer-li {
    color: white;
    float: center;
    text-align: center;
    display: inline;
    border-right: 0px solid #bbb;
}


#banner {
    /* width: 100%; */
    height: auto;
    max-width: 100%;
    /* float: center; */
}


.homebox {width: 100%; float: center; margin-bottom: 10px; background: #fff; overflow: hidden;}
/*.header {background: #6c6c6c; color: #FFF; border-bottom: 1px solid #6c6c6c; padding: 5px; font-size: 14px; font-weight: bold;}
.inside {background: #FCFCFC; border: 1px solid #6c6c6c; padding: 10px; height: 100%;}
.dashboard-heading {background: #146091;}*/

#icons {list-style: none; margin:0; padding:0;text-align:center}
#icons a {text-decoration: none;}
#icons li {display:inline-block; width: 100px; height: 100px; border:1px solid #ccc; margin: 0 7px 7px 0;}
#icons li:hover {border:1px solid #aaa; background: #ddd;}
#icons li img {padding: 8px 18px 2px 18px; align: center;}
#icons li h6 {color: #333; font-size:12px; text-align: center; margin:0; padding:0;}



 /* Desktop */
 
 @media only screen and (min-width: 768px){

    li {
        float: left;
        display: inline;
        border-right: 1px solid #bbb;
    }
    .rightSideLink{
        float: right;
        border-left: 1px solid #bbb;
        
    }

    li:last-child {
        border-right: none;
    }
    
    li a {
        padding: 14px 16px;
    }

    a:hover:not(.active) {
        background-color: #111;
    }

